@@ -4,6 +4,9 @@
 -document stringification with overloaded ""
 -change in behavior: all query scanning functions now treat '&' and ';' as
  valid separators
+-change in behavior: explicitly specifying a separator in a query setter
+ replaces existing separators in the query
+-new aliases: url_encode, url_decode
 
 0.34 2018-06-13
 -bugfix: set_param could clobber existing query parameters (credit: aeruder)
